--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,61 @@
-*.[ao]
-*.mo
-*.la
-*.lo
-.deps
-.libs
+# OSX
+#
+.DS_Store
 
-CMakeFiles
-CMakeCache.txt
-Makefile
-Makefile.in
-config.h
-cmake_install.cmake
-cmake_uninstall.cmake
-install_manifest.txt
+# Xcode
+#
+build/
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata
+*.xccheckout
+*.moved-aside
+DerivedData
+*.hmap
+*.ipa
+*.xcuserstate
+project.xcworkspace
+
+# Android/IJ
+#
+*.iml
+.idea
+.gradle
+local.properties
+
+# node.js
+#
+node_modules/
+npm-debug.log
+
+# BUCK
+buck-out/
+\.buckd/
+android/app/libs
+*.keystore
+
+# fastlane
+#
+# It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
+# screenshots whenever they are needed.
+# For more information about the recommended setup visit:
+# https://github.com/fastlane/fastlane/blob/master/fastlane/docs/Gitignore.md
+
+fastlane/report.xml
+fastlane/Preview.html
+fastlane/screenshots
+
+# Repository
+styleguide/
+lib/
+bundle.js
+/coverage/
+
+/yarn-error.log
+/.styleguide
