--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,52 @@
-.gradle/
-.idea/
-app/app.iml
-app/build/
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+*.lnk
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.miss
+*.exe
+*.out
+*.app
+*~
+*.pyc
+*.mpi
+*.exe
+*tmp*
+*.rabit
+*.mock
+recommonmark
+recom
+_*
+
+#mpi lib
+mpich/
+mpich-3.2/
+
+# Jetbrain
+.idea
+cmake-build-debug/
+.vscode/
+
+# cmake
 build/
-lib/build/
-lib/lib.iml
-*.iml
-local.properties
+compile_commands.json
