--- a/.editorconfig
+++ b/.editorconfig
@@ -1,22 +1,15 @@
-# EditorConfig helps developers define and maintain consistent
-# coding styles between different editors and IDEs.
-# editorconfig.org
+# EditorConfig is awesome: https://EditorConfig.org
 
+# top-most EditorConfig file
 root = true
 
+# Unix-style newlines with a newline ending every file
 [*]
-
-# We recommend you to keep these unchanged.
+indent_style = space
+indent_size = 2
 charset = utf-8
 end_of_line = lf
-indent_size = 2
-indent_style = space
 insert_final_newline = true
-trim_trailing_whitespace = true
 
-[package.json]
-indent_style = space
-indent_size = 2
-
-[*.md]
-trim_trailing_whitespace = false
+[*.py]
+indent_size = 4
