--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,42 @@
-.ipynb_checkpoints
-.pytest_cache
+__pycache__/
+.idea/
+.fleet/
+.vscode/
+**/dist/*
+**/build/
+**/node_modules/
+test/coverage/
+**/tmp/*
+**/src/.venv/*
+logs/*
+core/config/**/*.json
+bin/coqui/*
+bin/flite/*
+
+package-lock.json
 *.pyc
-tests/*.csv
-*.ipynb
-.venv
 .DS_Store
-docs/content/*.md
-!docs/content/_index.md
-!docs/content/*.ipynb
-dist
-public
-.vscode
+*.sublime-workspace
+npm-debug.log
+debug.log
+.env
+.last-skill-npm-install
+leon.json
+bridges/python/src/Pipfile.lock
+tcp_server/src/Pipfile.lock
+!tcp_server/**/.gitkeep
+!bridges/python/**/.gitkeep
+!bridges/nodejs/**/.gitkeep
+!**/*.sample*
+skills/**/src/settings.json
+skills/**/memory/*.json
+core/data/models/*.nlp
+core/data/models/*.json
+core/data/models/llm/*
+core/data/models/audio/tts/**/*.*
+!core/data/models/audio/tts/config.json
+core/data/models/audio/asr/**/*.*
+!core/data/models/**/.gitkeep
+package.json.backup
+.python-version
+schemas/**/*.json
